# spice-web-client

./: .gitignore  Gruntfile.js  README.build_process.md  README.md  benchmark.html  bower.json  build.gradle  commit-stage.sh  compile.php  deploy.sh  deploy_into_new_desktop.sh  desktop-vdi-debug.sh  execGraphicTests.sh  externs.list  extractJsonVersion.js  extractMainFromBower.js  getting-started.txt  graphic-tests.sh  graphictestgenerator.php  index.html  index_all.html  jsquic.js  karma.graphictests.conf.js  manifest.webapp  package.json  package.sh  performanceTestChromeHeadless.sh  prerequirements.sh  record.php  replay.html  run.js  sonar-project.properties  sonar.properties  test.html  test.sh  testPackage.sh  testaudioapi.html  tocompile.list  tracefile
application/: WorkerProcess.js  WorkerProcess_back.js  WorkerProcess_meta.js  WorkerProcess_reverse.js  agent.js  application.js  checkActivity.js  clientgui.js  clipboard.js  imagecache.js  inputmanager.js  packetfactory.js  packetfilter.js  packetprocess.js  rasteroperation.js  spiceconnection.js  stream.js  virtualmouse.js
application/clipboard/: clipboarddataparser.js
doc/: draw_alpha_blend  draw_fill  draw_rop3  glyph_notes  lzss.c
keymaps/: keyevent.js  keymap.js  keymapes.js  keymapesObj.js  keymapus.js  scanCodeObjModifier.js  scanCodeObjProvider.js
lib/: AsyncConsumer.js  AsyncWorker.js  CollisionDetector.js  DataLogger.js  GenericObjectPool.js  GlobalPool.js  ImageUncompressor.js  IntegrationBenchmark.js  PacketWorkerIdentifier.js  SyncAsyncHandler.js  base64.js  biginteger.js  bowser.js  displayRouter.js  encrypt.js  flipper.js  graphic.js  graphicdebug.js  jgestures.min.js  jsbn.js  jsbn2.js  lodash.4.0.0.min.js  modernizr.js  pixastic.js  prettyprint.js  prng4.js  queue.js  rasterEngine.js  rng.js  runqueue.js  sha1.js  stuckkeyshandler.js  timelapsedetector.js  utils.js  virtualjoystick.js
lib/images/: bitmap.js  jsquic_family.js  jsquic_rgba.js  jsquic_uncompress.js  lz.js  png.js
misc/celt-0.5.1.3/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  celt051.pc  (+7 more)
misc/celt-0.5.1.3/tools/: Makefile  Makefile.am  Makefile.in  celtdec.c  celtenc.c
misc/celt-0.5.1.3/tools/.deps/: celtdec.Po  celtenc.Po  skeleton.Po  wav_io.Po
misc/libcacard-0.1.2/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  cac.c  cac.h  cac.lo  card_7816.c  card_7816.h  card_7816.lo  card_7816t.h  config.h  config.h.in  config.status  configure  configure.ac  event.c  eventt.h  libcacard.la  libcacard.pc  libcacard.pc.in  libtool  mutex.h  passthru.c  passthru.h  passthru.lo  vcard.c  vcard.h  vcard.lo  vcard_emul.h  vcard_emul_nss.c  vcard_emul_nss.lo  vcard_emul_type.c  vcard_emul_type.h  vcard_emul_type.lo  vcardt.h  vevent.h  vreader.c  (+6 more)
misc/libcacard-0.1.2/.deps/: cac.Plo  card_7816.Plo  event.Plo  passthru.Plo  vcard.Plo  vcard_emul_nss.Plo  vcard_emul_type.Plo  vreader.Plo  vscclient.Po
misc/libcacard-0.1.2/.libs/: libcacard.la  libcacard.lai  libcacard.so.0.0.0  vscclient
misc/spice-protocol-0.10.1/: Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.status  configure  configure.ac  spice-protocol.pc
misc/spice-protocol-0.10.1/spice/: Makefile  Makefile.am  Makefile.in  controller_prot.h  enums.h  foreign_menu_prot.h  qxl_dev.h
network/: busconnection.js  clusternodechooser.js  connectioncontrol.js  packetcontroller.js  packetextractor.js  packetlinkfactory.js  packetreassembler.js  reassemblerfactory.js  sizedefiner.js  socket.js  socketqueue.js  spicechannel.js  websocketwrapper.js
process/: busprocess.js  cursorprocess.js  displaypreprocess.js  displayprocess.js  inputprocess.js  mainprocess.js  playbackprocess.js
recorded/: lz_rgba_100096_1920x137  lz_rgba_1000_639x19  lz_rgba_10088_1920x22  lz_rgba_10092_1446x19  lz_rgba_101032_510x393  lz_rgba_1012_140x37  lz_rgba_10142_1920x22  lz_rgba_10160_1920x22  lz_rgba_1019256_1650x647  lz_rgba_1022_20x20  lz_rgba_1030_56x56  lz_rgba_10330_639x19  lz_rgba_1038_23x22  lz_rgba_104272_1920x141  lz_rgba_10434_244x570  lz_rgba_10482_91x66  lz_rgba_105034_1920x141  lz_rgba_105482_1920x137  lz_rgba_1054_102x37  lz_rgba_1054_23x22  lz_rgba_10568_403x64  lz_rgba_105768_1920x141  lz_rgba_10598_217x26  lz_rgba_106272_1920x141  lz_rgba_1064_16x16  lz_rgba_10662_91x66  lz_rgba_10724_84x66  lz_rgba_10766_1706x19  lz_rgba_10816_1733x19  lz_rgba_10842_217x26  lz_rgba_1086_16x16  lz_rgba_1086_23x22  lz_rgba_1086_891x8  lz_rgba_10904_403x64  lz_rgba_10926_403x64  lz_rgba_10956_84x66  lz_rgba_10974_1680x19  lz_rgba_10986_217x26  lz_rgba_10996_217x26  lz_rgba_1100_16x16  (+711 more)
replay/: .gitignore  runreplay.js
spiceobjects/: spiceobjects.js
swcanvas/: swcanvas.js
testlibs/: fakewebsocket.js  test-config.js
tools/: generate.php  generateKeyboardLayout.php  generateSpiceObject.php
unittest/: application.test.js  busconnection.test.js  busprocess.test.js  clientgui.test.js  clipboarddataparser.test.js  clusternodechooser.test.js  collisiondetector.test.js  connectioncontrol.test.js  displayprocess.test.js  displayrouter.test.js  eventobject.test.js  graphic.test.js  graphictest.test.js  imageuncompressor.test.js  inputmanager.test.js  keymap.test.js  keymapesObj.test.js  packetcontroller.test.js  packetextractor.test.js  packetfactory.test.js  packetlinkfactory.test.js  packetprocess.test.js  packetreassembler.test.js  queue.test.js  reassemblerfactory.test.js  runqueue.test.js  scanCodeObjModifier.test.js  sizedefiner.test.js  socket.test.js  socketqueue.test.js  spicechannel.test.js  spiceconnection.test.js  stuckkeyshandler.test.js  syncasynchandler.test.js  tests.js  timelapsedetector.test.js  viewqueue.test.js
xml/: enums.xml  protocol.h  protocols.xml  qxl_dev.xml
(+212 files in other folders)
