NULL =

spice_protocol_includedir=$(includedir)/spice-1/spice

spice_protocol_include_HEADERS=		\
	barrier.h	\
	controller_prot.h	\
	end-packed.h	\
	enums.h	\
	error_codes.h	\
	foreign_menu_prot.h	\
	ipc_ring.h	\
	protocol.h	\
	macros.h	\
	qxl_dev.h	\
	start-packed.h	\
	stats.h		\
	types.h		\
	vd_agent.h	\
	vdi_dev.h	\
	$(NULL)
